Add rest method to list all VMs
