# internal/models/rest/list_vms.go
@@ -1,0 +1,7 @@
+package rest
+
+import "github.com/fireflycons/hypervcsi/internal/models"
+
+type ListVMResponse struct {
+	VMs []*models.GetVMResponse
+}
